@@ -180,7 +180,7 @@ public class Zone {
 
         int barDirection = CONFIG.getInt("bossbar-direction", 0);
         float calculated = (float) (time % rewardSeconds) / (rewardSeconds - 1);
-        bossBar.progress(Math.max(0f, Math.min(1f, barDirection == 0 ? 1f - calculated : calculated)));
+        bossBar.progress(Math.clamp(barDirection == 0 ? 1f - calculated : calculated, 0f, 1f));
 
         Section section;
         if ((section = settings.getSection("in-zone.bossbar")) != null) {
@@ -189,10 +189,11 @@ public class Zone {
     }
 
     private void giveRewards(Player player, int newTime) {
-        final List<Reward> rewardList = rollAndGiveRewards(player);
+        List<Reward> rewardList = rollAndGiveRewards(player);
+        if (rewardList.isEmpty()) return;
         if (settings.getStringList("messages.reward").isEmpty()) return;
 
-        final String prefix = CONFIG.getString("prefix");
+        String prefix = CONFIG.getString("prefix");
         boolean first = true;
         for (String string : settings.getStringList("messages.reward")) {
             if (first) {
@@ -217,12 +218,19 @@ public class Zone {
     }
 
     public List<Reward> rollAndGiveRewards(Player player) {
-        final List<Reward> rewardList = new ArrayList<>();
+        List<Reward> rewardList = new ArrayList<>();
         if (rewards.isEmpty()) return rewardList;
-        final HashMap<Reward, Double> chances = new HashMap<>();
+
+        int time = zonePlayers.getOrDefault(player, 0);
+        Map<Reward, Double> chances = new HashMap<>();
         for (Reward reward : rewards) {
+            String permission = reward.getPermission();
+            if (permission != null && !permission.isBlank() && !player.hasPermission(permission)) continue;
+            int minimumTime = reward.getMinimumTime();
+            if (time < minimumTime) continue;
             chances.put(reward, reward.getChance());
         }
+        if (chances.isEmpty()) return rewardList;
 
         for (int i = 0; i < rollAmount; i++) {
             Reward sel = RandomUtils.randomValue(chances);
